@@ -27,12 +27,10 @@ mw = ms[0]
 mh = ms[1]
 stop = 1
 setdat = loadsettings.load()
+macrov = 1.14
 if __name__ == '__main__':
     print("Your python version is {}".format(sys.version_info[0]))
-    with open('changelog.txt') as f:
-        lines = f.readlines()
-    f.close()
-    print("Your macro version is {}".format(lines[0]))
+    print("Your macro version is {}".format(macrov))
     manager = multiprocessing.Manager()
     currentfield = manager.Value(ctypes.c_wchar_p, "")
     bpc = multiprocessing.Value('i', 0)
@@ -653,14 +651,17 @@ if __name__ == "__main__":
     root.geometry('700x400')
     s = ttk.Style()
     s.theme_use("aqua")
+    wbgc = '#E4E4E4'
+    s.configure('frame.TFrame', background=wbgc)
+    root.configure(background='#ECECEC')
     notebook = ttk.Notebook(root)
     notebook.pack(expand=True, pady = 5)
     root.title("exih_macro")
     # create frames
-    frame1 = ttk.Frame(notebook, width=700, height=400)
-    frame2 = ttk.Frame(notebook, width=700, height=400)
-    frame3 = ttk.Frame(notebook, width=700, height=400)
-    frame4 = ttk.Frame(notebook, width=700, height=400)
+    frame1 = ttk.Frame(notebook, width=700, height=400,style='frame.TFrame')
+    frame2 = ttk.Frame(notebook, width=700, height=400,style='frame.TFrame')
+    frame3 = ttk.Frame(notebook, width=700, height=400,style='frame.TFrame')
+    frame4 = ttk.Frame(notebook, width=700, height=400,style='frame.TFrame')
 
     frame1.pack(fill='both', expand=True)
     frame2.pack(fill='both', expand=True)
@@ -721,7 +722,6 @@ if __name__ == "__main__":
     wwa  = savedata['ww']
     wha = savedata['wh']
     def startGo():
-        webhook("Macro started","","dark brown")
         global setdat, stop
         setdict = {
             "hive_number": hive_number.get(),
@@ -768,6 +768,7 @@ if __name__ == "__main__":
             f.write('wh:{}\nww:{}'.format(wh,ww))
         f.close()
         savesettings(setdict)
+        webhook("Macro started","exih_macro {}".format(macrov),"dark brown")
         setdat = loadsettings.load()
         startLoop_proc = multiprocessing.Process(target=startLoop,args=(currentfield,bpc,gather,disconnected))
         startLoop_proc.start()
@@ -805,92 +806,92 @@ if __name__ == "__main__":
             urltextbox.configure(state="disable")
             
     #Tab 1
-    tkinter.Checkbutton(frame1, text="Enable Gathering", variable=gather_enable, bg = "#E4E4E4").place(x=0, y = 15)
+    tkinter.Checkbutton(frame1, text="Enable Gathering", variable=gather_enable, bg = wbgc).place(x=0, y = 15)
     dropField = tkinter.OptionMenu(frame1, gather_field, *[x.split("_")[1][:-3].title() for x in os.listdir("./") if x.startswith("field_")] )
     dropField.place(width=110,x = 120, y = 50)
-    tkinter.Label(frame1, text = "Gathering Field", bg = "#E4E4E4").place(x = 0, y = 50)
+    tkinter.Label(frame1, text = "Gathering Field", bg = wbgc).place(x = 0, y = 50)
 
-    tkinter.Label(frame1, text = "Gathering Pattern", bg = "#E4E4E4").place(x = 0, y = 85)
+    tkinter.Label(frame1, text = "Gathering Pattern", bg = wbgc).place(x = 0, y = 85)
     dropField = tkinter.OptionMenu(frame1, gather_pattern, *[x.split("_",1)[1][:-3] for x in os.listdir("./") if x.startswith("gather_")])
     dropField.place(width=110,x = 120, y = 85)
-    tkinter.Label(frame1, text = "Size", bg = "#E4E4E4").place(x = 250, y = 85)
+    tkinter.Label(frame1, text = "Size", bg = wbgc).place(x = 250, y = 85)
     dropField = tkinter.OptionMenu(frame1, gather_size, *["S","M","L"] )
     dropField.place(width=50,x = 290, y = 85)
-    tkinter.Label(frame1, text = "Width", bg = "#E4E4E4").place(x = 360, y = 85)
+    tkinter.Label(frame1, text = "Width", bg = wbgc).place(x = 360, y = 85)
     dropField = tkinter.OptionMenu(frame1, gather_width, *[(x+1) for x in range(10)] )
     dropField.place(width=50,x = 410, y = 85)
 
-    tkinter.Label(frame1, text = "Before Gathering, Rotate Camera", bg = "#E4E4E4").place(x = 0, y = 120)
+    tkinter.Label(frame1, text = "Before Gathering, Rotate Camera", bg = wbgc).place(x = 0, y = 120)
     dropField = tkinter.OptionMenu(frame1, before_gather_turn, *["None","Left","Right"] )
     dropField.place(width=60,x = 210, y = 120)
     dropField = tkinter.OptionMenu(frame1, turn_times, *[(x+1) for x in range(4)] )
     dropField.place(width=50,x = 275, y = 120)
 
-    tkinter.Label(frame1, text = "Gather Until:", bg = "#E4E4E4").place(x = 0, y = 155)
-    tkinter.Label(frame1, text = "Mins", bg = "#E4E4E4").place(x = 90, y = 155)
+    tkinter.Label(frame1, text = "Gather Until:", bg = wbgc).place(x = 0, y = 155)
+    tkinter.Label(frame1, text = "Mins", bg = wbgc).place(x = 90, y = 155)
     timetextbox = tkinter.Text(frame1, width = 4, height = 1)
     timetextbox.insert("end",gather_time)
     timetextbox.place(x = 130, y=158)
-    tkinter.Label(frame1, text = "Backpack%", bg = "#E4E4E4").place(x = 175, y = 155)
+    tkinter.Label(frame1, text = "Backpack%", bg = wbgc).place(x = 175, y = 155)
     packtextbox = tkinter.Text(frame1, width = 4, height = 1)
     packtextbox.insert("end",pack)
     packtextbox.place(x = 260, y=158)
-    tkinter.Label(frame1, text = "To Hive By", bg = "#E4E4E4").place(x = 305, y = 155)
+    tkinter.Label(frame1, text = "To Hive By", bg = wbgc).place(x = 305, y = 155)
     dropConvert = tkinter.OptionMenu(frame1 , return_to_hive, command = disablews, *["Walk","Reset","Rejoin","Whirligig"])
     dropConvert.place(width=85,x = 380, y = 155)
-    tkinter.Label(frame1, text = "Whirligig Slot", bg = "#E4E4E4").place(x = 480, y = 155)
+    tkinter.Label(frame1, text = "Whirligig Slot", bg = wbgc).place(x = 480, y = 155)
     wslotmenu = tkinter.OptionMenu(frame1 , whirligig_slot, *[1,2,3,4,5,6,7,"none"])
     wslotmenu.place(width=70,x = 570, y = 155)
 
     #Tab 2 
-    tkinter.Checkbutton(frame2, text="Apply gifted vicious bee hive bonus", variable=gifted_vicious_bee, bg = "#E4E4E4").place(x=0, y = 15)
-    tkinter.Checkbutton(frame2, text="Stump Snail", variable=stump_snail, bg = "#E4E4E4").place(x=0, y = 50)
-    tkinter.Checkbutton(frame2, text="Ladybug", variable=ladybug, bg = "#E4E4E4").place(x=0, y = 85)
-    tkinter.Checkbutton(frame2, text="Rhino Beetle", variable=rhinobeetle, bg = "#E4E4E4").place(x=80, y = 85)
-    tkinter.Checkbutton(frame2, text="Scorpion", variable=scorpion, bg = "#E4E4E4").place(x=190, y = 85)
-    tkinter.Checkbutton(frame2, text="Mantis", variable=mantis, bg = "#E4E4E4").place(x=275, y = 85)
-    tkinter.Checkbutton(frame2, text="Spider", variable=spider, bg = "#E4E4E4").place(x=345, y = 85)
-    tkinter.Checkbutton(frame2, text="Werewolf", variable=werewolf, bg = "#E4E4E4").place(x=415, y = 85)
+    tkinter.Checkbutton(frame2, text="Apply gifted vicious bee hive bonus", variable=gifted_vicious_bee, bg = wbgc).place(x=0, y = 15)
+    tkinter.Checkbutton(frame2, text="Stump Snail", variable=stump_snail, bg = wbgc).place(x=0, y = 50)
+    tkinter.Checkbutton(frame2, text="Ladybug", variable=ladybug, bg = wbgc).place(x=0, y = 85)
+    tkinter.Checkbutton(frame2, text="Rhino Beetle", variable=rhinobeetle, bg = wbgc).place(x=80, y = 85)
+    tkinter.Checkbutton(frame2, text="Scorpion", variable=scorpion, bg = wbgc).place(x=190, y = 85)
+    tkinter.Checkbutton(frame2, text="Mantis", variable=mantis, bg = wbgc).place(x=275, y = 85)
+    tkinter.Checkbutton(frame2, text="Spider", variable=spider, bg = wbgc).place(x=345, y = 85)
+    tkinter.Checkbutton(frame2, text="Werewolf", variable=werewolf, bg = wbgc).place(x=415, y = 85)
 
     #Tab 3
-    tkinter.Checkbutton(frame4, text="Wealth Clock", variable=wealthclock, bg = "#E4E4E4").place(x=0, y = 15)
-    tkinter.Checkbutton(frame4, text="Blueberry Dispenser", variable=blueberrydispenser, bg = "#E4E4E4").place(x=0, y = 50)
-    tkinter.Checkbutton(frame4, text="Strawberry Dispenser", variable=strawberrydispenser, bg = "#E4E4E4").place(x=160, y = 50)
-    tkinter.Checkbutton(frame4, text="(Free) Royal Jelly Dispenser", variable=royaljellydispenser, bg = "#E4E4E4").place(x=320, y = 50)
-    tkinter.Checkbutton(frame4, text="Treat Dispenser", variable=treatdispenser, bg = "#E4E4E4").place(x=520, y = 50)
+    tkinter.Checkbutton(frame4, text="Wealth Clock", variable=wealthclock, bg = wbgc).place(x=0, y = 15)
+    tkinter.Checkbutton(frame4, text="Blueberry Dispenser", variable=blueberrydispenser, bg = wbgc).place(x=0, y = 50)
+    tkinter.Checkbutton(frame4, text="Strawberry Dispenser", variable=strawberrydispenser, bg = wbgc).place(x=160, y = 50)
+    tkinter.Checkbutton(frame4, text="(Free) Royal Jelly Dispenser", variable=royaljellydispenser, bg = wbgc).place(x=320, y = 50)
+    tkinter.Checkbutton(frame4, text="Treat Dispenser", variable=treatdispenser, bg = wbgc).place(x=520, y = 50)
     #Tab 4
-    tkinter.Label(frame3, text = "Hive Slot (6-5-4-3-2-1)", bg = "#E4E4E4").place(x = 0, y = 15)
+    tkinter.Label(frame3, text = "Hive Slot (6-5-4-3-2-1)", bg = wbgc).place(x = 0, y = 15)
     dropField = tkinter.OptionMenu(frame3, hive_number, *[x+1 for x in range(6)] )
     dropField.place(width=60,x = 160, y = 15)
-    tkinter.Label(frame3, text = "Move Speed (without haste)", bg = "#E4E4E4").place(x = 0, y = 50)
+    tkinter.Label(frame3, text = "Move Speed (without haste)", bg = wbgc).place(x = 0, y = 50)
     speedtextbox = tkinter.Text(frame3, width = 4, height = 1)
     speedtextbox.insert("end",walkspeed)
     speedtextbox.place(x = 185, y=52)
-    tkinter.Checkbutton(frame3, text="Enable Discord Webhook", command = disabledw,variable=enable_discord_webhook, bg = "#E4E4E4").place(x=0, y = 85)
-    tkinter.Label(frame3, text = "Discord Webhook Link", bg = "#E4E4E4").place(x = 350, y = 85)
+    tkinter.Checkbutton(frame3, text="Enable Discord Webhook", command = disabledw,variable=enable_discord_webhook, bg = wbgc).place(x=0, y = 85)
+    tkinter.Label(frame3, text = "Discord Webhook Link", bg = wbgc).place(x = 350, y = 85)
     urltextbox = tkinter.Text(frame3, width = 24, height = 1, xscrollcommand = True)
     urltextbox.insert("end",discord_webhook_url)
-    sendss = tkinter.Checkbutton(frame3, text="Send screenshots", variable=send_screenshot, bg = "#E4E4E4")
+    sendss = tkinter.Checkbutton(frame3, text="Send screenshots", variable=send_screenshot, bg = wbgc)
     sendss.place(x=200, y = 85)
     urltextbox.place(x = 500, y=87)
-    tkinter.Label(frame3, text = "Screen Resolution:", bg = "#E4E4E4").place(x = 0, y = 120)
-    tkinter.Label(frame3, text = "Width", bg = "#E4E4E4").place(x = 150, y = 120)
+    tkinter.Label(frame3, text = "Screen Resolution:", bg = wbgc).place(x = 0, y = 120)
+    tkinter.Label(frame3, text = "Width", bg = wbgc).place(x = 150, y = 120)
     wwatextbox = tkinter.Text(frame3, width = 5, height = 1)
     wwatextbox.insert("end",wwa)
     wwatextbox.place(x=200,y=122)
-    tkinter.Label(frame3, text = "Height", bg = "#E4E4E4").place(x = 260, y = 120)
+    tkinter.Label(frame3, text = "Height", bg = wbgc).place(x = 260, y = 120)
     whatextbox = tkinter.Text(frame3, width = 5, height = 1)
     whatextbox.insert("end",wha)
     whatextbox.place(x=310,y=122)
-    tkinter.Label(frame3, text = "Display type", bg = "#E4E4E4").place(x = 0, y = 155)
+    tkinter.Label(frame3, text = "Display type", bg = wbgc).place(x = 0, y = 155)
     dropField = tkinter.OptionMenu(frame3, display_type, *["Built-in retina display","Built-in display"] )
     dropField.place(width=160,x = 100, y = 155)
-    tkinter.Label(frame3, text = "Private Server Link", bg = "#E4E4E4").place(x = 0, y = 190)
+    tkinter.Label(frame3, text = "Private Server Link", bg = wbgc).place(x = 0, y = 190)
     linktextbox = tkinter.Text(frame3, width = 24, height = 1)
     linktextbox.insert("end",private_server_link)
     linktextbox.place(x=150,y=192)
-    tkinter.Checkbutton(frame3, text="Enable Discord Bot", variable=enable_discord_bot, bg = "#E4E4E4").place(x=0, y = 225)
-    tkinter.Label(frame3, text = "Discord Bot Token", bg = "#E4E4E4").place(x = 170, y = 226)
+    tkinter.Checkbutton(frame3, text="Enable Discord Bot", variable=enable_discord_bot, bg = wbgc).place(x=0, y = 225)
+    tkinter.Label(frame3, text = "Discord Bot Token", bg = wbgc).place(x = 170, y = 226)
     tokentextbox = tkinter.Text(frame3, width = 24, height = 1)
     tokentextbox.insert("end",discord_bot_token)
     tokentextbox.place(x = 300, y=228)
